--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h2>The account owner has died by Mariyam, by hanging</h2>
+<h1>The account owner has killed by Mariyam, by hanging on the selling</h1>
