--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>The account owner has killed by Mariyam, by hanging on the selling</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Dead</title>
+</head>
+<body>
+
+<h1>The account owner has killed by Mariyam, by her hands</h1>
+</h1>
+
+</body>
+</html>
