--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>The account owner has killed by Mariyam, by her hands</h1>
-</h1>
+<h1>The account owner has killed by Mariyam, by her own hands...</h1>
 
 </body>
 </html>
