--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dead</title>
+<title>killed by mary</title>
 </head>
 <body>
 
-<h1>Owner has killed by mary__</h1>
+<h1>talhaf has killed by mary..</h1>
 
 </body>
 </html>
